--- a/css/product-box.css
+++ b/css/product-box.css
@@ -187,3 +187,11 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+
+@media (max-width: 768px) {
+
+.arrow-left, .arrow-right{
+	display: none;
+}
+
+}
